# SelfDB-mini

./: .env  LICENSE  README.md  docker-compose.yml  restore_from_backup.sh  setup.sh
backend/: Dockerfile  ab_benchmark.sh  db.py  locustfile.py  main.py  openapi.json  pyproject.toml  run_schemathesis.sh  security.py
backend/endpoints/: backups.py  tables.py  users.py
backend/models/: table.py  user.py
backend/services/: backup_service.py
frontend/: Dockerfile  index.html  nginx.conf  nginx.conf.template  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/client/: sdk.gen.ts  types.gen.ts
frontend/src/components/: BulkActionsToolbar.tsx  Layout.tsx  Modal.tsx  index.ts
frontend/src/components/DataTable/: DataTable.tsx  TableHeader.tsx  index.ts  types.ts
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Backups.tsx  Dashboard.tsx  Login.tsx  TableDetail.tsx  Tables.tsx  Users.tsx
pgbouncer-1.25.0/: Dockerfile  docker-entrypoint.sh
